--- a/WAP.ipynb
+++ b/WAP.ipynb
@@ -35,8 +35,13 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.common.exceptions import NoSuchElementException\n",
     "from bs4 import BeautifulSoup\n",
+    "from email_validator import validate_email, EmailNotValidError\n",
+    "from phonenumbers import carrier\n",
+    "import re\n",
     "import time\n",
+    "import phonenumbers\n",
     "import datetime\n",
+    "\n",
     "print(\"### Packages Imported ###\")\n",
     "print(datetime.datetime.now())"
    ]
@@ -75,13 +80,90 @@
     "    \"msg_preview\": fst_msg_box,  \n",
     "    }\n",
     "    return thisdict\n",
-    "##############################################################################################################\n",
-    "##############################################################################################################\n",
+    "##########################################################\n",
+    "##########################################################\n",
+    "\n",
     "def get_exact_contact_name_from_chat(chat_box):\n",
     "    ### Getting exact contact name with _19vo_\n",
     "    return chat_box.find_element_by_class_name(\"_19vo_\").text\n",
-    "##############################################################################################################\n",
-    "##############################################################################################################"
+    "##########################################################\n",
+    "##########################################################\n",
+    "\n",
+    "def clutfree(chat):\n",
+    "    ### Words to remove ###\n",
+    "    days = \"\"\"MONDAY TUESDAY WEDNESDAY THURSDAY FRIDAY SATURDAY SUNDAY YESTERDAY TODAY\"\"\"\n",
+    "    ### Converted to list and added words###\n",
+    "    remove_list = days.split(' ')\n",
+    "    remove_list.append('UNREAD MESSAGE') # Appedded 'UNREAD MESSAGE'\n",
+    "    \n",
+    "    final_list = []\n",
+    "    for word in chat:\n",
+    "        # For loop\n",
+    "        str=\"\"\n",
+    "        str+=word\n",
+    "        if (str not in remove_list):# or (str.endswith(' AM') or str.endswith(' PM')) :\n",
+    "            # print(str)\n",
+    "            if ((str.endswith(' AM') or str.endswith(' PM')) != True):\n",
+    "               final_list.append(str)\n",
+    "    return final_list\n",
+    "##########################################################\n",
+    "##########################################################\n",
+    "def get_full_chatbox_info(chat_box):\n",
+    "    phone_nums = \"\"\n",
+    "    email_ids = \"\"\n",
+    "    messages = \"\"\n",
+    "    ### Getting full chat with _1ays2 ###\n",
+    "    rawchatdata = ((chat_box.find_element_by_class_name(\"_1ays2\")).text).split(\"\\n\")\n",
+    "    ### Cleaning chat ###\n",
+    "    contact_chatlist = clutfree(rawchatdata)\n",
+    "    ### Running loop on last 5 text messages \n",
+    "    # TODO\n",
+    "    ### Reverse loop of contact_chatlist\n",
+    "    for chats in reversed(contact_chatlist):\n",
+    "        ### Trying to get phone number from chat\n",
+    "        for matched in phonenumbers.PhoneNumberMatcher(chats,\"IN\"):\n",
+    "            phone_nums += str(matched.number)\n",
+    "            phone_nums += '\\n'\n",
+    "        \n",
+    "        ### Getting all email addresses\n",
+    "        try:\n",
+    "            v = validate_email(chats) # validate and get info\n",
+    "            email_ids += str(v[\"email\"]) # replace with normalized form\n",
+    "            email_ids += '\\n'\n",
+    "            # print(email)\n",
+    "        except: # EmailNotValidError as e:\n",
+    "            # email is not valid, exception message is human-readable\n",
+    "            # print(str(e))\n",
+    "            continue\n",
+    "    ### Addind last 5 strings, Dont know how\n",
+    "    listlen = len(contact_chatlist)\n",
+    "    if listlen <= 5:\n",
+    "        messages = '\\n'.join(contact_chatlist)        \n",
+    "        # last_messages = contact_chatlist.copy()\n",
+    "        # messages = '\\n'.join(last_messages)\n",
+    "\n",
+    "    elif listlen > 5:\n",
+    "        # last_messages = contact_chatlist[-5:]\n",
+    "        messages = '\\n'.join(contact_chatlist[-5:])        \n",
+    "\n",
+    "    # messages = '\\n'.join(last_messages)\n",
+    "    # print(messages)\n",
+    "            \n",
+    "    chatdict = {\n",
+    "    \"phone_numbers\": phone_nums,\n",
+    "    \"email_ids\": email_ids,\n",
+    "    \"messages\":messages,  \n",
+    "    }\n",
+    "\n",
+    "    return chatdict\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print(contact_chatlist)\n",
+    "# temp = get_full_chatbox_info(chat_box)\n",
+    "# print(temp)\n",
+    "##########################################################\n",
+    "##########################################################"
    ]
   },
   {
@@ -106,18 +188,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##############################################################################################################\n",
+    "##########################################################\n",
     "### Repeating further code till runlimit with a delay of wait_time, wait_time is in millisecs     \n",
-    "##############################################################################################################\n",
-    "runlimit = 10 \n",
+    "##########################################################\n",
+    "runlimit = 30 \n",
     "milli_sec = 50\n",
     "milli_sec = milli_sec / 1000\n",
     "\n",
     "for i in range(runlimit):\n",
-    "    print(\"Ran for \", i, \" Time\", len(contacts_name_set), len(chat_contactswise_list))\n",
+    "    already_waited = False\n",
+    "    print(\"Ran for \", i, \" Time\", len(contacts_name_set), len(chatbox_name_set))\n",
     "    # print(\"Ran for \", i)\n",
-    "    ##############################################################################################################\n",
-    "    ##############################################################################################################\n",
+    "    ##########################################################\n",
     "    ##########################################################\n",
     "\n",
     "    ### Got Both 1) Allcontact boxes, 2)Chat box\n",
@@ -137,31 +219,33 @@
     "        ### All data is stored in two data sets-> contacts_dict_list, contacts_name_set\n",
     "        \n",
     "    ##########################################################\n",
-    "    ### Getting contact name again(For verification) and chats\n",
     "    for chat_box in tab_right_indexes:\n",
     "        try:\n",
+    "            ### Getting contact name again(For verification) and chats\n",
     "            ### Scraping exact contact(name or number) from chat_box \n",
     "            temp = get_exact_contact_name_from_chat(chat_box)\n",
-    "            chatbox_name_set.add(temp)\n",
+    "            print(temp)\n",
+    "            chatbox_name_set.add(str(temp))\n",
     "        except :\n",
-    "            print('### Error ###')\n",
+    "            print('### Error. Waiting... ###')\n",
+    "            time.sleep(milli_sec)\n",
+    "            already_waited = True\n",
+    "        ##########################################################\n",
+    "        ### Getting full chat ####################################\n",
+    "        # TODO\n",
+    "        ### Handling chat ###\n",
+    "        # temp = get_full_chatbox_info(chat_box):\n",
+    "\n",
     "\n",
     "    ##########################################################\n",
-    "    ### Getting full chat ####################################\n",
-    "    # TODO\n",
-    "\n",
-    "\n",
-    "    ##############################################################################################################\n",
-    "    ##############################################################################################################\n",
-    "     \n",
-    "\n",
-    "\n",
-    "\n",
+    "    ##########################################################\n",
     "\n",
     "\n",
     "    i = i + 1\n",
-    "    time.sleep(milli_sec)\n",
-    "\n",
+    "    if  already_waited == False:\n",
+    "        time.sleep(milli_sec)\n",
+    "    ### Completed ############################################\n",
+    "    ##########################################################    \n",
     "print('~~~',chatbox_name_set)\n",
     "print('\\n','\\n')    \n",
     "print(\"Final Testing Output\",\" -> \", \"Contacts names set\")\n",
