--- a/WAP.ipynb
+++ b/WAP.ipynb
@@ -41,6 +41,7 @@
     "import time\n",
     "import phonenumbers\n",
     "import datetime\n",
+    "import pandas as pd\n",
     "\n",
     "print(\"### Packages Imported ###\")\n",
     "print(datetime.datetime.now())"
@@ -108,54 +109,56 @@
     "    return final_list\n",
     "##########################################################\n",
     "##########################################################\n",
-    "def get_full_chatbox_info(chat_box):\n",
-    "    phone_nums = \"\"\n",
-    "    email_ids = \"\"\n",
-    "    messages = \"\"\n",
-    "    ### Getting full chat with _1ays2 ###\n",
-    "    rawchatdata = ((chat_box.find_element_by_class_name(\"_1ays2\")).text).split(\"\\n\")\n",
-    "    ### Cleaning chat ###\n",
-    "    contact_chatlist = clutfree(rawchatdata)\n",
-    "    ### Running loop on last 5 text messages \n",
-    "    # TODO\n",
-    "    ### Reverse loop of contact_chatlist\n",
-    "    for chats in reversed(contact_chatlist):\n",
-    "        ### Trying to get phone number from chat\n",
-    "        for matched in phonenumbers.PhoneNumberMatcher(chats,\"IN\"):\n",
-    "            phone_nums += str(matched.number)\n",
-    "            phone_nums += '\\n'\n",
+    "# def get_full_chatbox_info(chat_box):\n",
+    "#     phone_nums = \"\"\n",
+    "#     email_ids = \"\"\n",
+    "#     messages = \"\"\n",
+    "#     ### Getting full chat with _1ays2 ###\n",
+    "#     rawchatdata = ((chat_box.find_element_by_class_name(\"_1ays2\")).text).split(\"\\n\")\n",
+    "#     ### Cleaning chat ###\n",
+    "#     contact_chatlist = clutfree(rawchatdata)\n",
+    "#     ### Running loop on last 5 text messages \n",
+    "#     # TODO\n",
+    "#     ### Reverse loop of contact_chatlist\n",
+    "#     for chats in reversed(contact_chatlist):\n",
+    "#         ### Trying to get phone number from chat\n",
+    "#         for matched in phonenumbers.PhoneNumberMatcher(chats,\"IN\"):\n",
+    "#             phone_nums += str(matched.number)\n",
+    "#             phone_nums += '\\n'\n",
     "        \n",
-    "        ### Getting all email addresses\n",
-    "        try:\n",
-    "            v = validate_email(chats) # validate and get info\n",
-    "            email_ids += str(v[\"email\"]) # replace with normalized form\n",
-    "            email_ids += '\\n'\n",
-    "            # print(email)\n",
-    "        except: # EmailNotValidError as e:\n",
-    "            # email is not valid, exception message is human-readable\n",
-    "            # print(str(e))\n",
-    "            continue\n",
-    "    ### Addind last 5 strings, Dont know how\n",
-    "    listlen = len(contact_chatlist)\n",
-    "    if listlen <= 5:\n",
-    "        messages = '\\n'.join(contact_chatlist)        \n",
-    "        # last_messages = contact_chatlist.copy()\n",
-    "        # messages = '\\n'.join(last_messages)\n",
+    "#         ### Getting all email addresses\n",
+    "#         try:\n",
+    "#             v = validate_email(chats) # validate and get info\n",
+    "#             email_ids += str(v[\"email\"]) # replace with normalized form\n",
+    "#             email_ids += '\\n'\n",
+    "#             # print(email)\n",
+    "#         except: # EmailNotValidError as e:\n",
+    "#             # email is not valid, exception message is human-readable\n",
+    "#             # print(str(e))\n",
+    "#             continue\n",
+    "#     ### Addind last 5 strings, Dont know how\n",
+    "#     listlen = len(contact_chatlist)\n",
+    "#     if listlen <= 5:\n",
+    "#         messages = '\\n'.join(contact_chatlist)        \n",
+    "#         # last_messages = contact_chatlist.copy()\n",
+    "#         # messages = '\\n'.join(last_messages)\n",
     "\n",
-    "    elif listlen > 5:\n",
-    "        # last_messages = contact_chatlist[-5:]\n",
-    "        messages = '\\n'.join(contact_chatlist[-5:])        \n",
+    "#     elif listlen > 5:\n",
+    "#         # last_messages = contact_chatlist[-5:]\n",
+    "#         messages = '\\n'.join(contact_chatlist[-5:])        \n",
     "\n",
-    "    # messages = '\\n'.join(last_messages)\n",
-    "    # print(messages)\n",
+    "#     # messages = '\\n'.join(last_messages)\n",
+    "#     # print(messages)\n",
     "            \n",
-    "    chatdict = {\n",
-    "    \"phone_numbers\": phone_nums,\n",
-    "    \"email_ids\": email_ids,\n",
-    "    \"messages\":messages,  \n",
-    "    }\n",
+    "#     chatdict = {\n",
+    "#     \"phone_numbers\": phone_nums,\n",
+    "#     \"email_ids\": email_ids,\n",
+    "#     \"messages\":messages,  \n",
+    "#     }\n",
     "\n",
-    "    return chatdict\n",
+    "#     return chatdict\n",
+    "def get_full_chatbox_info(chat_box):\n",
+    "    print(chat_box.text)\n",
     "\n",
     "\n",
     "\n",
@@ -191,7 +194,7 @@
     "##########################################################\n",
     "### Repeating further code till runlimit with a delay of wait_time, wait_time is in millisecs     \n",
     "##########################################################\n",
-    "runlimit = 30 \n",
+    "runlimit = 10\n",
     "milli_sec = 50\n",
     "milli_sec = milli_sec / 1000\n",
     "\n",
@@ -226,17 +229,23 @@
     "            temp = get_exact_contact_name_from_chat(chat_box)\n",
     "            print(temp)\n",
     "            chatbox_name_set.add(str(temp))\n",
+    "\n",
+    "            ### Getting chat from selected box\n",
+    "            ### Will received this dictionary by get_full_chatbox_info()\n",
+    "            # chatdict = {\n",
+    "            #     \"phone_numbers\": phone_nums,\n",
+    "            #     \"email_ids\": email_ids,\n",
+    "            #     \"messages\":messages,  \n",
+    "            #     }\n",
+    "            \n",
+    "            full_chatbox_info = get_full_chatbox_info()\n",
+    "            print(full_chatbox_info.phone_numbers, full_chatbox_info.email_ids, full_chatbox_info.messages)\n",
+    "            print('dsdsdsdsd')\n",
+    "\n",
     "        except :\n",
     "            print('### Error. Waiting... ###')\n",
     "            time.sleep(milli_sec)\n",
     "            already_waited = True\n",
-    "        ##########################################################\n",
-    "        ### Getting full chat ####################################\n",
-    "        # TODO\n",
-    "        ### Handling chat ###\n",
-    "        # temp = get_full_chatbox_info(chat_box):\n",
-    "\n",
-    "\n",
     "    ##########################################################\n",
     "    ##########################################################\n",
     "\n",
@@ -249,6 +258,7 @@
     "print('~~~',chatbox_name_set)\n",
     "print('\\n','\\n')    \n",
     "print(\"Final Testing Output\",\" -> \", \"Contacts names set\")\n",
+    "\n",
     "print\n",
     "print(contacts_name_set)"
    ]
